💄 Fix alignment

--- a/apps/user-demo/src/app/pages/dashboard-page/dashboard-page.component.scss
+++ b/apps/user-demo/src/app/pages/dashboard-page/dashboard-page.component.scss
@@ -1,9 +1,12 @@
 h2 {
   // * Centralize
-  position: absolute;
+  position: relative;
 
   right: 50%;
   top: 50%;
+
+  text-align: center;
+  width: 100%;
 
   transform: translate(50%, -50%);
 
